1_pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: sample-pod
  labels:
    role: all-in-one
spec:
  containers:
  - name: app-container
    image: masayaaoyama/flexy-demo-app:v1.0
    imagePullPolicy: Always
  - name: mysql-container
    image: mysql:8.0
    volumeMounts:
    - name: init-sql-configmap
      mountPath: /docker-entrypoint-initdb.d
  volumes:
    - name: init-sql-configmap
      configMap:
        name: init-db-sql
---
apiVersion: v1
kind: Service
metadata:
  name: flexy-demo-all-in-one
spec:
  type: LoadBalancer
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8080
      targetPort: 8080
  selector:
    role: all-in-one
