2_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flexy-demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      role: app
  template:
    metadata:
      labels:
        role: app
    spec:
      containers:
      - name: app-container
        image: masayaaoyama/flexy-demo-app:v1.0
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: flexy-demo-app
spec:
  type: LoadBalancer
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8080
      targetPort: 8080
  selector:
    role: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      role: db
  template:
    metadata:
      labels:
        role: db
    spec:
      containers:
      - name: mysql-container
        image: mysql:8.0
        volumeMounts:
        - name: init-sql-configmap
          mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: init-sql-configmap
          configMap:
            name: init-db-sql
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ClusterIP
  ports:
    - name: "mysql-port"
      protocol: "TCP"
      port: 3306
      targetPort: 3306
  selector:
    role: db
