4_ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-ingress
spec:
  rules:
  - host: sample.example.com
    http:
      paths:
      - path: /user/*
        backend:
          serviceName: flexy-demo-app
          servicePort: 8080
      - path: /product/*
        backend:
          serviceName: flexy-demo-app2
          servicePort: 8080
  tls:
  - hosts:
    - sample.example.com
    secretName: tls-sample
